--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
         Single Page App
       </div>
       <a class="item" href="/">
-        Currency Rates
+        Currency Rates updated
       </a>
       <a class="item" href="/exchange">
-        Exchange Rates
-      </a>
+        Exchange Rates updated
+      </a
       <a class="item" href="/historical">
         Historical Rates
       </a>
